--- a/roman-name-generator/.project
+++ b/roman-name-generator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>battle_arena</name>
+	<name>roman-name-generator</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -20,11 +20,4 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
-	<linkedResources>
-		<link>
-			<name>lib/roman-name-generator.jar</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/roman-name-generator.jar</locationURI>
-		</link>
-	</linkedResources>
 </projectDescription>
